--- a/land_price_estimation.ipynb
+++ b/land_price_estimation.ipynb
@@ -41,7 +41,7 @@
    "id": "4699e7fe",
    "metadata": {},
    "source": [
-    "## 1. Load Data\n",
+    "## Step 1: Load Data\n",
     "In this step, we load the dataset and perform a quick first look to understand what we are working with."
    ]
   },
@@ -244,7 +244,7 @@
    "id": "557df834",
    "metadata": {},
    "source": [
-    "## 02. Prepare Data & Feature Engineering\n",
+    "## Step 2: Prepare Data & Feature Engineering\n",
     "\n",
     "This step converts raw land data into clean, model-ready predictors.\n",
     "\n",
@@ -760,7 +760,7 @@
    "id": "04193b7a",
    "metadata": {},
    "source": [
-    "## Step 2.4: Combine Numerical + Dummy Features\n",
+    "### Step 2.4: Combine Numerical + Dummy Features\n",
     "\n",
     "We now combine:\n",
     "- `numeric_features` (continuous values)\n",
